[package]
authors = ["Konstantin Lomotin <ke.lomotin@gmail.com>"]
edition = "2021"
name = "markov"
version = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
rand = "0.8.5"
thiserror = "1.0.49"

[[bin]]
"name" = "markov_chain"
"path" = "src/main.rs"
